# bhyve-mcp

./: .env.example  README.md  bhyve-mcp-spec.md  pyproject.toml
src/bhyve_mcp/: __init__.py  client.py  models.py  server.py
src/bhyve_mcp/pybhyve/: __init__.py  client.py  websocket.py
tests/: conftest.py  test_server.py
