[project]
name = "bhyve-mcp"
version = "0.1.0"
description = "MCP server for Orbit B-Hyve irrigation systems"
readme = "README.md"
authors = [
    { name = "Norman Garrett", email = "norman2112@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.14.1",
    "mcp>=1.27.0",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
]

[project.scripts]
bhyve-mcp = "bhyve_mcp.server:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
]
